<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.archiektor.warehouse.EditingActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="109dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/image_od_supply"
        android:src="@drawable/bolt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_of_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/quantity_string"
        android:layout_marginEnd="58dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="18dp"
        android:text="@string/name_of_supply"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/quantity_string"
        android:layout_width="62dp"
        android:layout_height="14dp"
        android:layout_alignBottom="@+id/spinner"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/quantity_string"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/name_of_supply"
        app:layout_constraintTop_toBottomOf="@+id/name_of_supply" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/plus_button"
        android:src="@mipmap/ic_add_circle_outline_black_48dp"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintLeft_toRightOf="@+id/editTextAdd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
        android:id="@+id/minus_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/add_button"
        android:layout_below="@+id/add_button"
        android:layout_marginEnd="-1dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/minus_button"
        android:src="@mipmap/ic_remove_circle_outline_black_48dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/add_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button"

        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="35dp"
        android:text="@string/condition"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_of_supply"
        android:layout_below="@+id/name_of_supply"
        android:layout_marginTop="12dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/conditions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/quantity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/quantity_string"
        android:layout_below="@+id/quantity_string"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:text="@string/quantity_number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/quantity_string"
        app:layout_constraintTop_toBottomOf="@+id/quantity_string" />

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:hint="@string/number_of_adding_supplies"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_button" />

    <EditText
        android:id="@+id/editTextMinus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/number_of_minus_supplies"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/editTextAdd"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdd" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/setCondition"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


</android.support.constraint.ConstraintLayout>
